# gserver

./: .gitignore  CMakeLists.txt  build.sh  readme.md
src/: CMakeLists.txt  Controller.cpp  Controller.h  GServer.cpp  GServer.h  PlayerSession.cpp  PlayerSession.h  Room.cpp  Room.h  main.cpp
src/ChatServer/: CMakeLists.txt  ChatServer.cpp  ChatServer.h  main.cpp
src/auth/: CMakeLists.txt  PlayerSession.cpp  PlayerSession.h  Room.cpp  Room.h  UserManager.cpp  UserManager.h
src/common/: CMakeLists.txt  gserver.h  parseMessageHeader.cpp  parseMessageHeader.h  uncopyable.h
src/gserver/: CMakeLists.txt  ChatClient.cpp  ChatClient.h  Controller.cpp  Controller.h  GServer.cpp  GServer.h  PlayerSession.h  Room.cpp  Room.h  main.cpp
src/include/: gserver.h  parseMessageHeader.h
src/proto/: message.proto  playerpb.proto  protoc.sh  roompb.proto
wiki/: Home.md  Interface.md  Introduction.md
